# local-draw

./: .gitignore  CONTEXT.md  DESIGN.md  PRD.md  README.md  backup.sh  requirements.md  start.sh  test.sh
backend/: main.py  pyproject.toml  requirements.txt
backend/tests/: conftest.py  test_main.py
docs/adr/: 0001-mongodb-over-indexeddb.md  0002-pymongo-sync-in-thread-pool.md  0003-image-assets-on-disk.md
docs/issues/: 0001-project-scaffold-and-startup.md  0002-canvas-list-page.md  0003-canvas-editor-shell-and-infinite-canvas.md  0004-rectangle-tool-and-auto-save.md  0005-text-tool.md  0006-line-and-arrow-tool.md  0007-image-tool.md  0008-eraser-tool.md  0009-undo-redo.md  0010-multi-select-and-ordering.md  0011-copy-paste.md  0012-svg-export-import.md  0013-backup-script.md
frontend/: canvas.html  index.html  package-lock.json  package.json  styles.css
frontend/src/: editor.js
frontend/src/__tests__/: api.test.js  clipboard.test.js  eraser.test.js  history.test.js  image.test.js  line.test.js  rect.test.js  scene.test.js  selection.test.js  svg.test.js  text.test.js
frontend/src/core/: api.js  clipboard.js  history.js  scene.js  selection.js  svg.js
frontend/src/tools/: eraser.js  image.js  line.js  rect.js  text.js
frontend/src/ui/: list.js  properties.js  selection-properties.js
frontend/src/utils/: colors.js
