[project]
name = "backend"
version = "0.1.0"
description = "Local Draw backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.1",
    "pymongo>=4.17.0",
    "python-multipart>=0.0.32",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mongomock>=4.3.0",
    "pytest>=9.1.1",
]
